src/tests/const/3.txt
const/3.c:6:5: error: assignment of read-only location '*aa'
     *aa = a;
     ^
